[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://textures/v.png" type="Texture" id=2]
[ext_resource path="res://textures/stars6.jpg" type="Texture" id=3]
[ext_resource path="res://objects/vehicle.tscn" type="PackedScene" id=4]
[ext_resource path="res://textures/target.png" type="Texture" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -50.2995, 1067.63, -100.266, -26.0879, -0.332825, -16.8348, 3.36841, 1001.01 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 1702.24, 1060.22, -50.2995, 1067.63, 3.36841, 1001.01, 1602.3, 999.154 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( 1750.35, -76.0546, 1702.24, 1060.22, 1602.3, 999.154, 1600.45, -3.88049 )

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( -105.818, -79.7558, 1750.35, -76.0546, 1600.45, -3.88049, -103.967, 1.67136 )

[node name="main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="v" type="TextureFrame" parent="CanvasLayer"]

visibility/blend_mode = 3
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = -3.0
margin/bottom = -3.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="TextureFrame" type="TextureFrame" parent="CanvasLayer"]

visibility/visible = false
visibility/opacity = 0.5
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = -154.0
margin/bottom = -63.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="deltaSS" type="Label" parent="CanvasLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
text = "11"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="timeSS" type="Label" parent="CanvasLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 17.0
margin/right = 40.0
margin/bottom = 31.0
text = "11"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="CanvasLayer"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 115.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "RESTART"
flat = false

[node name="vihicles" type="Node2D" parent="."]

[node name="vehicle" parent="vihicles" instance=ExtResource( 4 )]

transform/pos = Vector2( 388.847, 304.811 )

[node name="food_container" type="Node2D" parent="."]

editor/display_folded = true

[node name="target" type="Sprite" parent="food_container"]

visibility/visible = false
visibility/opacity = 0.5
transform/pos = Vector2( 576.177, 284.765 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

editor/display_folded = true
visibility/visible = false
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = true
shapes/2/shape = SubResource( 3 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = true
shapes/3/shape = SubResource( 4 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = true
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]

build_mode = 0
polygon = Vector2Array( -0.332825, -16.8348, 3.36841, 1001.01, 1602.3, 999.154, 1600.45, -3.88049, -103.967, 1.67136, -105.818, -79.7558, 1750.35, -76.0546, 1702.24, 1060.22, -50.2995, 1067.63, -100.266, -26.0879 )
shape_range = Vector2( 0, 3 )
trigger = true

[node name="camera" type="Camera2D" parent="."]

transform/pos = Vector2( 800, 500 )
z/relative = false
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.0
drag_margin/top = 0.0
drag_margin/right = 0.0
drag_margin/bottom = 0.0

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]


